# bevy_auto_timer

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE-MIT  README.md
examples/: basic.rs
src/: lib.rs
