[package]
name = "bevy_auto_timer"
version = "0.1.0"
authors = ["Trung Do <dothanhtrung@pm.me>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/kimtinh/bevy_auto_timer"
keywords = ["bevy"]
description = "Bevy plugin for convenent timer"
exclude = ["assets", "examples", "tests", ".cargo"]
categories = ["game-development"]

[dependencies]
bevy = { version = "0.16", features = ["bevy_state"], default-features = false }

[dev-dependencies]
bevy = { version = "0.16", features = ["bevy_state", "bevy_log", "dynamic_linking"], default-features = false }
